--- a/pages/EstouAMeApaixonar.html
+++ b/pages/EstouAMeApaixonar.html
@@ -32,17 +32,17 @@
 	
 	
 	
-		<div class="header">
-			<div class="logo">
-				<a href="../index.html"><p>Jonas</p>
-				<p>Carsi</p></a>
-			</div>
-			<!-- <div class="menu">
-				<ul>
-				<li><a href="escritas.html"><p><b>Escritas</b></p></a></li>
+	<div class="header">
+		<div class="logo">
+			<a href="../index.html"><p>Jonas</p>
+			<p>Carsi</p></a>
+		</div>
+		<div class="menu">
+			<ul>
+			<li><a href="sobre.html"><p>Sobre</p></a></li>
 						
 				</ul>
-			</div> -->
+			</div>
 		</div>
 		
 		<article>
