--- a/pages/JaGastamosAspalavras.html
+++ b/pages/JaGastamosAspalavras.html
@@ -37,12 +37,12 @@
 				<a href="../index.html"><p>Jonas</p>
 				<p>Carsi</p></a>
 			</div>
-			<!-- <div class="menu">
+			<div class="menu">
 				<ul>
-				<li><a href="escritas.html"><p><b>Escritas</b></p></a></li>
+				<li><a href="sobre.html"><p>Sobre</p></a></li>
 						
 				</ul>
-			</div> -->
+			</div>
 		</div>
 		
 		<article>
