--- a/pages/JaGastamosAspalavras.html
+++ b/pages/JaGastamosAspalavras.html
@@ -39,7 +39,7 @@
 			</div>
 			<div class="menu">
 				<ul>
-				<li><a href="sobre.html"><p>Sobre</p></a></li>
+				<li><a href="Sobre.html"><p>Sobre</p></a></li>
 						
 				</ul>
 			</div>
