--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			</div>
 			<div class="menu">
 				<ul>
-				<li><a href="pages/sobre.html"><p>Sobre</p></a></li>
+				<li><a href="pages/Sobre.html"><p>Sobre</p></a></li>
 						
 				</ul>
 			</div>
