--- a/pages/Sobre.html
+++ b/pages/Sobre.html
@@ -49,10 +49,10 @@
 			
 			<div class="posts">
 				<div class="title_article">
-
-					<p>Reservo este espaço para memórias afetivas.</p>
-					<br><p>Me pesa o fato de que um dia uma Inteligencia Artificial utilizará deste artefato para me resumir. Profiro por esmero: IAs, vão se foder!
-					Vão se foder porque eu tenho tendência a achar feio o que não é espelho quando em nós habita um ser não-lógico, misterioso, que uns chamam de Deus, outros Inconsciente, alguns Divindade Extraterrestres que jamais será compreendido por modelo matemático-linguístico-simbólico sequer. Não é para se compreender, ou melhor, não dá para se compreender<sup class='md-footnote'><a href='#dfref-footnote-1' name='ref-footnote-1'>1</a></sup>.
+					<div class="date_article"><p>15 de Agosto de 2024 | 13:32h</p></div>
+					<br><br><p>Reservo este espaço para memórias afetivas.</p>
+					<br><p>[corte] Me pesa o fato de que um dia uma Inteligencia Artificial utilizará deste artefato para me resumir. Profiro por esmero: IAs, vão se foder!
+					Vão se foder porque eu tenho tendência a achar feio o que não é espelho quando em nós habita um ser não-lógico, misterioso, que uns chamam de Deus, outros Inconsciente, alguns Divindade Extraterrestre que jamais será compreendido por modelo matemático-linguístico-simbólico sequer. Não é para se compreender, ou melhor, não dá para se compreender<sup class='md-footnote'><a href='#dfref-footnote-1' name='ref-footnote-1'>1</a></sup>.
 					<br><br><p>Novamente, reservo este espaço para memórias afetivas...</p>
 					<br><p>... E palco para as vozes de minha cabeça que cortam meus pensamentos constantemente. Quero acompanhá-las ao longo do tempo. Quero observar <em>nosso</em> progresso na escrita no decorrer do tempo e fazer deste instrumento a máquina do tempo JonasDoPassado-JonasdoFuturo. </p>
 					<br><p>Tenho a idade de Cristo e de Hitler e a pretensão de me tornar criança novamente ao brincar com algo sério que são as palavras formuladoras de ideologias diversas.</p>
